trustfall_core/src/resources/test_data/valid_queries/edge_parameter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 10) {
        value @output
    }
}"#,
    arguments: {},
)
