trustfall_core/src/resources/test_data/parse_errors/directive_on_root.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 5) @output {
        value @output
    }
}"#,
    arguments: {},
)
